--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.0.4",
     "npm": "^9.7.2",
     "razorpay": "^2.8.6"
